--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "java-script-handlebars-templates",
+  "name": "java-script-lodash-templates-lab",
   "version": "0.1.0",
-  "description": "",
+  "description": "Practice using lodash templates",
   "main": "index.js",
   "scripts": {
     "test": "mocha -R mocha-multi --reporter-options nyan=-,json=.results.json"
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/learn-co-curriculum/java-script-handlebars-templates.git"
+    "url": "git+ssh://git@github.com/learn-co-curriculum/java-script-lodash-templates-lab.git"
   },
   "keywords": [
     "javascript",
@@ -18,14 +18,24 @@
   "author": "pletcher",
   "license": "SEE LICENSE IN LICENSE.md",
   "bugs": {
-    "url": "https://github.com/learn-co-curriculum/java-script-handlebars-templates/issues"
+    "url": "https://github.com/learn-co-curriculum/java-script-lodash-templates-lab/issues"
   },
-  "homepage": "https://github.com/learn-co-curriculum/java-script-handlebars-templates#readme",
+  "homepage": "https://github.com/learn-co-curriculum/java-script-lodash-templates-lab#readme",
   "devDependencies": {
-    "expect": "^1.20.1",
-    "jsdom": "^9.2.1",
+    "babel-core": "^6.11.4",
+    "babel-preset-es2015": "^6.9.0",
+    "expect": "^1.20.2",
+    "jsdom": "10.0.0",
+    "mocha": "^2.5.3",
+    "mocha-jsdom": "1.1.0",
+    "mocha-multi": "^0.9.0"
+  },
+  "dependencies": {
+    "expect": "^1.20.2",
+    "jsdom": "10.0.0",
+    "lodash": "^4.14.0",
     "mocha": "^2.5.3",
     "mocha-jsdom": "^1.1.0",
-    "mocha-multi": "^0.9.0"
+    "xmlhttprequest": "^1.8.0"
   }
 }
