--- a/package.json
+++ b/package.json
@@ -22,10 +22,17 @@
   },
   "homepage": "https://github.com/learn-co-curriculum/java-script-handlebars-templates#readme",
   "devDependencies": {
-    "expect": "^1.20.1",
+    "expect": "^1.20.2",
     "jsdom": "^9.2.1",
     "mocha": "^2.5.3",
-    "mocha-jsdom": "^1.1.0",
+    "mocha-jsdom": "~1.1.0",
     "mocha-multi": "^0.9.0"
+  },
+  "dependencies": {
+    "expect": "^1.20.2",
+    "jsdom": "^9.4.1",
+    "lodash": "^4.14.0",
+    "mocha": "^2.5.3",
+    "mocha-jsdom": "~1.1.0"
   }
 }
