--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "mocha -R mocha-multi --reporter-options nyan=-,json=.results.json"
-  },
+  // "scripts": {
+  //   "test": "mocha -R mocha-multi --reporter-options nyan=-,json=.results.json"
+  // },
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/learn-co-curriculum/java-script-handlebars-templates.git"
@@ -25,7 +25,7 @@
     "expect": "^1.20.1",
     "jsdom": "^9.2.1",
     "mocha": "^2.5.3",
-    "mocha-jsdom": "^1.1.0",
+    "mocha-jsdom": "~1.1.0",
     "mocha-multi": "^0.9.0"
   }
 }
